vlib/v/checker/tests/array_of_sumtype_append_err.vv
type Bar = BarA | BarB

struct BarA {}

struct BarB {}

fn main() {
	mut bar := []Bar{}
	bar << ['hey']
	bar << 'hey'
}
